--- a/table/style_table.css
+++ b/table/style_table.css
@@ -63,5 +63,5 @@ caption {
     background-repeat: no-repeat;
 }
 .UK {
-    background-position: -100 -6140;
+    background-position: -10px -46px;
 }
